RESOLVED FIXED166347
Muted media element playback should not interrupt other audio playback
https://bugs.webkit.org/show_bug.cgi?id=166347
Summary Muted media element playback should not interrupt other audio playback
Jer Noble
Reported 2016-12-21 10:29:49 PST
Muted media element playback should not interrupt other audio playback
Attachments
Patch (8.19 KB, patch)
2016-12-21 10:31 PST, Jer Noble
no flags
Jer Noble
Comment 1 2016-12-21 10:31:26 PST
Jer Noble
Comment 2 2016-12-21 10:42:37 PST
WebKit Commit Bot
Comment 3 2016-12-22 09:33:21 PST
Comment on attachment 297599 [details] Patch Clearing flags on attachment: 297599 Committed r210100: <http://trac.webkit.org/changeset/210100>
WebKit Commit Bot
Comment 4 2016-12-22 09:33:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.