Muted media element playback should not interrupt other audio playback https://bugs.webkit.org/show_bug.cgi?id=166347

Reviewed by Eric Carlson.

Source/WebCore:

Test: TestWebKitAPI/WebKit/ios/AudioSessionCategoryIOS.mm

* platform/audio/cocoa/MediaSessionManagerCocoa.cpp:
(PlatformMediaSessionManager::updateSessionState):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/ios/AudioSessionCategoryIOS.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit/ios/video-with-muted-audio.html: Added.


Canonical link: https://commits.webkit.org/183707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210100 268f45cc-cd09-0410-ab3c-d52691b4dbfc